Fix style issues and GM problem on Firefox
- Change styles to make input size properly
- Change the raw github links from raw.github.com to rawgithub.com

--- a/public_html/chat.css
+++ b/public_html/chat.css
@@ -128,6 +128,11 @@ img {
 	text-align: center;
 	vertical-align: top;
 }
+
+.channelHeader a {
+    color: rgb(0, 170, 255);
+}
+
 #channelContainer {
 	position: absolute;
 	top: 50px; /*TODO: CHANGE THIS TO MATCH!!!*/
@@ -188,11 +193,16 @@ img {
     padding: 3px;
 }
 
+#inputContainer {
+    position: absolute;
+    top: 2px;
+    bottom: 2px;
+    right: 25px;
+    left: 0px;
+}
+
 #chatMessageContainer input {
-	position: absolute;
-	width: 97%;
-	height: 19px;
-	bottom: 0px;
+	width: 100%;
 }
 
 #onlineList {
@@ -265,6 +275,7 @@ img {
 #smileyLink {
     position: absolute;
     right: 2px;
+    bottom: 2px;
 }
 
 #tooltip {
